--- a/test_no_std/Cargo.toml
+++ b/test_no_std/Cargo.toml
@@ -18,26 +18,18 @@ package = "substrate-api-client"
 path = ".."
 default-features=false
 
-[dependencies.sr-io]
-git = "https://github.com/scs/substraTEE-node"
-rev = 'd4a057c5841796994b46b6b35de922ec5777fec5'
-package = 'sr-io'
-default-features=false
-features = ["no_oom", "no_panic_handler"]
-
-[patch.'https://github.com/paritytech/substrate']
-sr-io = { git = "https://github.com/scs/substraTEE-node", rev = 'd4a057c5841796994b46b6b35de922ec5777fec5' }
-substrate-primitives = { path = "../primitives"}
-substrate-application-crypto = { git = "https://github.com/scs/substrate", tag = "substraTEE-M5.1" }
-sr-std = { git = "https://github.com/scs/substrate", tag = "substraTEE-M5.1" }
-
-[patch.'https://github.com/scs/substrate']
-sr-io = { git = "https://github.com/scs/substraTEE-node", rev = 'd4a057c5841796994b46b6b35de922ec5777fec5' }
-substrate-primitives = { path = "../primitives"}
+#[dependencies.sr-io]
+#git = "https://github.com/scs/substraTEE-node"
+#rev = 'd4a057c5841796994b46b6b35de922ec5777fec5'
+#package = 'sr-io'
+#default-features=false
+#features = ["no_oom", "no_panic_handler"]
+#
+#[patch.'https://github.com/paritytech/substrate']
+#sr-io = { git = "https://github.com/scs/substraTEE-node", rev = 'd4a057c5841796994b46b6b35de922ec5777fec5' }
 
 [patch.'https://github.com/scs/substrate-api-client']
-substrate-primitives = { path = "../primitives"}
 substrate-api-client = { path = "../"}
 
-[patch.crates-io]
-ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}
+#[patch.crates-io]
+#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}
