fixed feature logic for full_crypto in test-no-std. However, it seems that our upstream PR doesn't work yet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -130,6 +130,8 @@ std = [
 	"ws",
 	"hex",
 ]
+# need to add this for the app_crypto macro
+full_crypto = []
 
 [[example]]
 name = "example_get_storage"
