--- a/test_no_std/Cargo.toml
+++ b/test_no_std/Cargo.toml
@@ -17,6 +17,14 @@ libc = { version="0.2", default-features=false }
 package = "substrate-api-client"
 path = ".."
 default-features=false
+features=["full_crypto"]
+
+[dependencies.application-crypto]
+git = 'https://github.com/paritytech/substrate'
+rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+package = "substrate-application-crypto"
+default-features = false
+features = ["full_crypto"]
 
 #[dependencies.sr-io]
 #git = "https://github.com/scs/substraTEE-node"
@@ -28,8 +36,8 @@ default-features=false
 #[patch.'https://github.com/paritytech/substrate']
 #sr-io = { git = "https://github.com/scs/substraTEE-node", rev = 'd4a057c5841796994b46b6b35de922ec5777fec5' }
 
-[patch.'https://github.com/scs/substrate-api-client']
-substrate-api-client = { path = "../"}
+#[patch.'https://github.com/scs/substrate-api-client']
+#substrate-api-client = { path = "../"}
 
 #[patch.crates-io]
 #ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}
