--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ serde_json      = { version = "1.0", optional = true }
 primitive-types = { version = "0.6", default-features = false, features = ["codec"] }
 
 [dependencies.primitives]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "substrate-primitives"
 default-features = false
 features = ["full_crypto"]
@@ -27,81 +27,81 @@ version = "1.0.0"
 default-features = false
 
 [dependencies.indices]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "paint-indices"
 default-features=false
 
 [dependencies.runtime_io]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "sr-io"
 default-features=false
 
 [dependencies.metadata]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "paint-metadata"
 default-features=false
 
 [dependencies.runtime_version]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "sr-version"
 default-features=false
 
 [dependencies.balances]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "paint-balances"
 default-features=false
 
 [dependencies.system]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "paint-system"
 default-features=false
 
 [dependencies.runtime_primitives]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "sr-primitives"
 default-features=false
 
 [dependencies.runtime_support]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "paint-support"
 default-features=false
 
 [dependencies.rstd]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "sr-std"
 default-features = false
 
 [dev-dependencies.node_runtime]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "node-runtime"
 
 [dependencies.node_primitives]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "node-primitives"
 default-features=false
 
 [dev-dependencies.contracts]
-git = 'https://github.com/paritytech/substrate'
-rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "paint-contracts"
 
 [dev-dependencies]
 wabt = "0.9.0"
 
 [dev-dependencies.keyring]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = 'https://github.com/scs/substrate'
+branch = "brenzi-fix-full-crypto"
 package = "substrate-keyring"
 
 [dev-dependencies.clap] 
