--- a/tutorials/api-client-tutorial/Cargo.toml
+++ b/tutorials/api-client-tutorial/Cargo.toml
@@ -9,11 +9,11 @@ substrate-api-client = { path = "../.." }
 codec = { package = "parity-scale-codec", features = ["derive"], version = "1.0.0", default-features = false }
 
 [dependencies.primitives]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = "https://github.com/paritytech/substrate"
+rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"
 package = "substrate-primitives"
 
 [dependencies.keyring]
-git = 'https://github.com/paritytech/substrate'
-rev = '8700dbb1858f01b6ea6e3fc5d40d1478e7634c60'
+git = "https://github.com/paritytech/substrate"
+rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"
 package = "substrate-keyring"
