--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ version = '2.0.0-alpha.6'
 package = "sp-std"
 default-features = false
 
-[dependencies.node_template_runtime]
+[dev-dependencies.node_template_runtime]
 git = "https://github.com/scs/substrate-node-template"
 tag = 'v2.0.0-alpha.6-api-client'
 package = "node-template-runtime"
