-add-read-proof-rcp-and-small-refactoring (#89)
* use Storage keys instead of hex_str in json request

* [node_metadata] added storage_value_key, storage_map_key, storage_double_map_key

* [api] _get_request now returns an Option<String> which is none if the result field of the rpc response is zero. This fixed #85

* added read_proofs

* downgrade sp-chain-spec to alpha.7

* fix no_std build

* add at_block parameter in all get_storage calls

* fix test

* add cargo lock for test_no_std

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,10 @@ version = '2.0.0-alpha.7'
 package = "sp-std"
 default-features = false
 
+[dependencies.sc-rpc-api]
+version = '0.8.0-alpha.7'
+optional = true
+
 [dev-dependencies.node_template_runtime]
 git = "https://github.com/scs/substrate-api-client-test-node"
 tag = 'v2.0.0-alpha.7'
@@ -89,6 +93,7 @@ features = ["yaml"]
 [features]
 default = ["std"]
 std = [
+    "sc-rpc-api",
 	"sp-core/std",
 	"codec/std",
 	"runtime_io/std",
@@ -96,7 +101,7 @@ std = [
 	"sp-version/std",
 	"balances/std",
 	"system/std",
-        "sp-runtime/std",
+    "sp-runtime/std",
 	"support/std",
 	"sp-std/std",
 	"serde/std",
