--- a/test_no_std/Cargo.toml
+++ b/test_no_std/Cargo.toml
@@ -20,13 +20,13 @@ default-features=false
 features=["full_crypto"]
 
 [dependencies.application-crypto]
-version = '2.0.0-alpha.7'
+version = '2.0.0-rc5'
 package = "sp-application-crypto"
 default-features = false
 features = ["full_crypto"]
 
 [dependencies.sp-io]
-version = '2.0.0-alpha.7'
+version = '2.0.0-rc5'
 default-features=false
 features = ["disable_oom", "disable_panic_handler"]
 
