--- a/tutorials/api-client-tutorial/Cargo.toml
+++ b/tutorials/api-client-tutorial/Cargo.toml
@@ -9,8 +9,8 @@ substrate-api-client = { path = "../.." }
 codec = { package = "parity-scale-codec", features = ["derive"], version = "1.0.0", default-features = false }
 
 [dependencies.sp-core]
-version = '2.0.0-alpha.7'
+version = '2.0.0-rc5'
 
 [dependencies.keyring]
-version = '2.0.0-alpha.7'
+version = '2.0.0-rc5'
 package = "sp-keyring"
