--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "substrate-api-client"
-version = "0.4.8-sub2.0.0-rc5"
+version = "0.4.9-sub2.0.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -15,7 +15,7 @@ thiserror       = { version = "1.0", optional =true }
 primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }
 
 [dependencies.sp-core]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "sp-core"
 default-features = false
 features = ["full_crypto"]
@@ -27,63 +27,63 @@ version = "1.3.1"
 default-features = false
 
 [dependencies.runtime_io]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "sp-io"
 default-features=false
 
 [dependencies.metadata]
-version = '11.0.0-rc5'
+version = '12.0.0'
 package = "frame-metadata"
 default-features=false
 
 [dependencies.sp-version]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "sp-version"
 default-features=false
 
 [dependencies.balances]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "pallet-balances"
 default-features=false
 
 [dependencies.system]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "frame-system"
 default-features=false
 
 [dependencies.sp-runtime]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "sp-runtime"
 default-features=false
 
 [dependencies.support]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "frame-support"
 default-features=false
 
 [dependencies.sp-std]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "sp-std"
 default-features = false
 
 [dependencies.sc-rpc-api]
-version = '0.8.0-rc5'
+version = '0.8.0'
 optional = true
 
 [dev-dependencies.node_template_runtime]
 git = "https://github.com/scs/substrate-api-client-test-node"
-tag = 'v2.0.0-rc5'
+tag = 'v2.0.0'
 package = "node-template-runtime"
 
 [dev-dependencies]
 wabt = "0.9.0"
 
 [dev-dependencies.contracts]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "pallet-contracts"
 
 [dev-dependencies.keyring]
-version = '2.0.0-rc5'
+version = '2.0.0'
 package = "sp-keyring"
 
 [dev-dependencies.clap]
