convenience re-exports and rename of keystore

--- a/client-keystore/Cargo.toml
+++ b/client-keystore/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "client-keystore"
+name = "substrate-client-keystore"
 version = "0.1.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
