--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "substrate-api-client"
-version = "0.4.14"
+version = "0.5.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -16,7 +16,6 @@ primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }
 
 [dependencies.sp-core]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "sp-core"
 default-features = false
 features = ["full_crypto"]
@@ -24,72 +23,60 @@ features = ["full_crypto"]
 [dependencies.codec]
 package = "parity-scale-codec"
 features = ["derive"]
-version = "1.3.1"
+version = "2.0.0"
 default-features = false
 
 [dependencies.metadata]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "frame-metadata"
 default-features=false
 
 [dependencies.sp-version]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "sp-version"
 default-features=false
 
 [dependencies.balances]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "pallet-balances"
 default-features=false
 
 [dependencies.system]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "frame-system"
 default-features=false
 
 [dependencies.sp-runtime]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "sp-runtime"
 default-features=false
 
 [dependencies.support]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "frame-support"
 default-features=false
 
 [dependencies.sp-std]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "sp-std"
 default-features = false
 
 [dependencies.sc-rpc-api]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 optional = true
 
-[dev-dependencies.node_template_runtime]
+[dev-dependencies.node-template-runtime]
 git = "https://github.com/scs/substrate-api-client-test-node"
-rev = "90438031"
-package = "node-template-runtime"
 
 [dev-dependencies]
 wabt = "0.9.0"
 
 [dev-dependencies.contracts]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "pallet-contracts"
 
 [dev-dependencies.keyring]
 git = "https://github.com/paritytech/substrate.git" 
-rev = "38f723bf"
 package = "sp-keyring"
 
 [dev-dependencies.clap]
