--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "substrate-api-client"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -16,6 +16,7 @@ primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }
 
 [dependencies.sp-core]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "sp-core"
 default-features = false
 features = ["full_crypto"]
@@ -28,55 +29,58 @@ default-features = false
 
 [dependencies.metadata]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "frame-metadata"
 default-features=false
 
 [dependencies.sp-version]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "sp-version"
-default-features=false
+optional = true
 
 [dependencies.balances]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "pallet-balances"
-default-features=false
+optional = true
 
 [dependencies.system]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "frame-system"
-default-features=false
+optional = true
 
 [dependencies.sp-runtime]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "sp-runtime"
 default-features=false
 
 [dependencies.support]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "frame-support"
 default-features=false
 
 [dependencies.sp-std]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "sp-std"
 default-features = false
 
 [dependencies.sc-rpc-api]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 optional = true
 
 [dev-dependencies.node-template-runtime]
 git = "https://github.com/scs/substrate-api-client-test-node"
-
-[dev-dependencies]
-wabt = "0.9.0"
-
-[dev-dependencies.contracts]
-git = "https://github.com/paritytech/substrate.git"
-package = "pallet-contracts"
+branch = "bump-to-polkadot-v0.9.2"
 
 [dev-dependencies.keyring]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "sp-keyring"
 
 [dev-dependencies.clap]
@@ -90,9 +94,9 @@ std = [
 	"sp-core/std",
 	"codec/std",
 	"metadata/std",
-	"sp-version/std",
-	"balances/std",
-	"system/std",
+	"sp-version",
+	"balances",
+	"system",
     "sp-runtime/std",
 	"support/std",
 	"sp-std/std",
@@ -149,6 +153,15 @@ name = "example_sudo"
 path = "src/examples/example_sudo.rs"
 
 # DEPRECATED. might work but too much work to maintain, sorry
+
+# needed for contract example
+#[dev-dependencies]
+#wabt = "0.10.0"
+
+#[dev-dependencies.contracts]
+#git = "https://github.com/paritytech/substrate.git"
+#branch = "master"
+#package = "pallet-contracts"
 
 #[[example]]
 #name = "example_contract"
