--- a/test_no_std/Cargo.toml
+++ b/test_no_std/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test_no_std"
-version = "0.1.0"
+version = "0.6.0"
 authors = ["Alain Brenzikofer <alain.brenzikofer@scs.ch>"]
 edition = "2018"
 
@@ -21,12 +21,14 @@ features=["full_crypto"]
 
 [dependencies.application-crypto]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 package = "sp-application-crypto"
 default-features = false
 features = ["full_crypto"]
 
 [dependencies.sp-io]
 git = "https://github.com/paritytech/substrate.git"
+branch = "master"
 default-features=false
 features = ["disable_oom", "disable_panic_handler"]
 
