--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 env_logger      = { version = "0.7", optional = true }
 ws              = { version = "0.9.1", optional = true, features = ["ssl"] }
-hex             = { version = "0.4.2", default-features = false }
+hex             = { version = "0.4.3", default-features = false, features = ["alloc"] }
 log             = { version = "0.4", optional = true }
 serde           = { version = "1.0", optional = true, features = ["derive"] }
 serde_json      = { version = "1.0", optional = true }
