--- a/test_no_std/Cargo.toml
+++ b/test_no_std/Cargo.toml
@@ -3,6 +3,7 @@ name = "test_no_std"
 version = "0.6.0"
 authors = ["Alain Brenzikofer <alain.brenzikofer@scs.ch>"]
 edition = "2018"
+resolver = "2"
 
 [profile.dev]
 panic = "abort"
