--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,16 @@ authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
 [dependencies]
-env_logger      = { version = "0.7", optional = true }
-ws              = { version = "0.9.1", optional = true, features = ["ssl"] }
-hex             = { version = "0.4.3", default-features = false, features = ["alloc"] }
-log             = { version = "0.4", optional = true }
-serde           = { version = "1.0", optional = true, features = ["derive"] }
-serde_json      = { version = "1.0", optional = true }
-thiserror       = { version = "1.0", optional =true }
+hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
+log = { version = "0.4", optional = true }
 primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+serde_json = { version = "1.0", optional = true }
+thiserror = { version = "1.0", optional = true }
+ws = { version = "0.9.1", optional = true, features = ["ssl"] }
+
+[dev-dependencies]
+env_logger = "0.7"
 
 [dependencies.sp-core]
 git = "https://github.com/paritytech/substrate.git"
@@ -31,7 +33,7 @@ default-features = false
 git = "https://github.com/paritytech/substrate.git"
 branch = "master"
 package = "frame-metadata"
-default-features=false
+default-features = false
 
 [dependencies.sp-version]
 git = "https://github.com/paritytech/substrate.git"
@@ -55,13 +57,13 @@ optional = true
 git = "https://github.com/paritytech/substrate.git"
 branch = "master"
 package = "sp-runtime"
-default-features=false
+default-features = false
 
 [dependencies.support]
 git = "https://github.com/paritytech/substrate.git"
 branch = "master"
 package = "frame-support"
-default-features=false
+default-features = false
 
 [dependencies.sp-std]
 git = "https://github.com/paritytech/substrate.git"
@@ -69,14 +71,9 @@ branch = "master"
 package = "sp-std"
 default-features = false
 
-[dependencies.sc-rpc-api]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-optional = true
-
 [dev-dependencies.node-template-runtime]
-git = "https://github.com/scs/substrate-api-client-test-node"
 branch = "bump-to-polkadot-v0.9.2"
+git = "https://github.com/scs/substrate-api-client-test-node"
 
 [dev-dependencies.keyring]
 git = "https://github.com/paritytech/substrate.git"
@@ -84,31 +81,30 @@ branch = "master"
 package = "sp-keyring"
 
 [dev-dependencies.clap]
-version = "2.33"
 features = ["yaml"]
+version = "2.33"
 
 [features]
-default = ["std"]
+default = ["std", "ws-client"]
 std = [
-    "sc-rpc-api",
 	"sp-core/std",
 	"codec/std",
 	"metadata/std",
 	"sp-version",
 	"balances",
 	"system",
-    "sp-runtime/std",
+	"sp-runtime/std",
 	"support/std",
 	"sp-std/std",
 	"serde/std",
 	"serde_json",
-	"env_logger",
 	"log",
-	"ws",
 	"hex/std",
 	"primitive-types",
 	"thiserror",
 ]
+ws-client = ["ws"]
+
 # need to add this for the app_crypto macro
 full_crypto = []
 
@@ -151,6 +147,10 @@ path = "src/examples/example_benchmark_bulk_xt.rs"
 [[example]]
 name = "example_sudo"
 path = "src/examples/example_sudo.rs"
+
+[[example]]
+name = "example_custom_client"
+path = "src/examples/example_custom_client.rs"
 
 # DEPRECATED. might work but too much work to maintain, sorry
 
