--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,10 +47,30 @@ branch = "master"
 package = "pallet-balances"
 optional = true
 
+[dependencies.staking]
+git = "https://github.com/paritytech/substrate.git"
+branch = "master"
+package = "pallet-staking"
+optional = true
+
 [dependencies.system]
 git = "https://github.com/paritytech/substrate.git"
 branch = "master"
 package = "frame-system"
+optional = true
+
+[dependencies.transaction-payment]
+git = "https://github.com/paritytech/substrate.git"
+branch = "master"
+package = "pallet-transaction-payment"
+default-features = false
+optional = true
+
+[dependencies.sp-rpc]
+git = "https://github.com/paritytech/substrate.git"
+branch = "master"
+package = "sp-rpc"
+default-features = false
 optional = true
 
 [dependencies.sp-runtime]
@@ -102,8 +122,11 @@ std = [
 	"hex/std",
 	"primitive-types",
 	"thiserror",
+	"sp-rpc",
+	"transaction-payment/std"
 ]
 ws-client = ["ws"]
+staking-xt = ["std", "staking"]
 
 # need to add this for the app_crypto macro
 full_crypto = []
