--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,6 +91,13 @@ branch = "master"
 package = "sp-std"
 default-features = false
 
+# need to add this for the app_crypto macro
+[dependencies.sp-application-crypto]
+git = "https://github.com/paritytech/substrate.git"
+branch = "master"
+default-features = false
+features = ["full_crypto"]
+
 [dev-dependencies.node-template-runtime]
 branch = "bump-to-polkadot-v0.9.2"
 git = "https://github.com/scs/substrate-api-client-test-node"
@@ -107,6 +114,7 @@ version = "2.33"
 [features]
 default = ["std", "ws-client"]
 std = [
+	"sp-application-crypto/std",
 	"sp-core/std",
 	"codec/std",
 	"metadata/std",
@@ -127,9 +135,6 @@ std = [
 ]
 ws-client = ["ws"]
 staking-xt = ["std", "staking"]
-
-# need to add this for the app_crypto macro
-full_crypto = []
 
 [[example]]
 name = "example_get_storage"
