--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,109 +7,35 @@ edition = "2018"
 [dependencies]
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 log = { version = "0.4", optional = true }
-primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }
+primitive-types = { version = "0.10.1", optional = true, features = ["codec"] }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
 thiserror = { version = "1.0", optional = true }
 ws = { version = "0.9.1", optional = true, features = ["ssl"] }
+codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
+
+# Substrate dependencies
+sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }
+metadata = { version = "14.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", package = "frame-metadata" }
+sp-version = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-version", optional = true }
+balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "pallet-balances", optional = true }
+staking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "pallet-staking", optional = true }
+system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "frame-system", optional = true }
+transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", package = "pallet-transaction-payment", optional = true }
+sp-rpc = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
+sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", package = "frame-support", branch = "master" }
+sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+# need to add this for the app_crypto macro
+sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }
+
 
 [dev-dependencies]
-env_logger = "0.7"
+env_logger = "0.9"
+node-template-runtime = { git = "https://github.com/scs/substrate-api-client-test-node", branch = "master" }
+keyring = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-keyring" }
+clap = { version = "2.33", features = ["yaml"] }
 
-[dependencies.sp-core]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "sp-core"
-default-features = false
-features = ["full_crypto"]
-
-[dependencies.codec]
-package = "parity-scale-codec"
-features = ["derive"]
-version = "2.0.0"
-default-features = false
-
-[dependencies.metadata]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "frame-metadata"
-default-features = false
-
-[dependencies.sp-version]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "sp-version"
-optional = true
-
-[dependencies.balances]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "pallet-balances"
-optional = true
-
-[dependencies.staking]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "pallet-staking"
-optional = true
-
-[dependencies.system]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "frame-system"
-optional = true
-
-[dependencies.transaction-payment]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "pallet-transaction-payment"
-default-features = false
-optional = true
-
-[dependencies.sp-rpc]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "sp-rpc"
-default-features = false
-optional = true
-
-[dependencies.sp-runtime]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "sp-runtime"
-default-features = false
-
-[dependencies.support]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "frame-support"
-default-features = false
-
-[dependencies.sp-std]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "sp-std"
-default-features = false
-
-# need to add this for the app_crypto macro
-[dependencies.sp-application-crypto]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-default-features = false
-features = ["full_crypto"]
-
-[dev-dependencies.node-template-runtime]
-branch = "bump-to-polkadot-v0.9.2"
-git = "https://github.com/scs/substrate-api-client-test-node"
-
-[dev-dependencies.keyring]
-git = "https://github.com/paritytech/substrate.git"
-branch = "master"
-package = "sp-keyring"
-
-[dev-dependencies.clap]
-features = ["yaml"]
-version = "2.33"
 
 [features]
 default = ["std", "ws-client"]
