--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,10 @@ name = "example_transfer"
 path = "src/examples/example_transfer.rs"
 
 [[example]]
+name = "example_event_error_details"
+path = "src/examples/example_event_error_details.rs"
+
+[[example]]
 name = "example_event_callback"
 path = "src/examples/example_event_callback.rs"
 
