expose existential deposit and add constants in metadata  (#154)
* Implement #129: add constants in metadata and read existential deposit from balances pallet

* Implement #129: call of print modules with constant in example_print_metadata.rsprint_metadata

Co-authored-by: echevrier <edith.chevrier@scs.ch>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,6 +110,10 @@ path = "src/examples/example_sudo.rs"
 name = "example_custom_client"
 path = "src/examples/example_custom_client.rs"
 
+[[example]]
+name = "example_get_existential_deposit"
+path = "src/examples/example_get_existential_deposit.rs"
+
 # DEPRECATED. might work but too much work to maintain, sorry
 
 # needed for contract example
