--- a/.github/workflows/build-test-clippy.yml
+++ b/.github/workflows/build-test-clippy.yml
@@ -27,7 +27,7 @@ jobs:
       run: cargo build --examples
     - name: test_no_std
       run: |
-        cd test_no_std
+        cd test-no-std
         cargo build
     - name: tutorial
       run: |
@@ -63,9 +63,9 @@ jobs:
         cargo clippy
     - name: examples
       run: cargo clippy --examples
-    - name: test_no_std
+    - name: test-no-std
       run: |
-        cd test_no_std
+        cd test-no-std
         cargo clippy
     - name: tutorial
       run: |
