--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@
 name = "substrate-api-client"
 version = "0.6.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
-edition = "2018"
+edition = "2021"
+
+[workspace]
+members = [
+	".",
+	"client-keystore",
+	"test-no-std",
+	"tutorials/api-client-tutorial",
+]
 
 [dependencies]
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
