--- a/node-api/Cargo.toml
+++ b/node-api/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 codec = { package = 'parity-scale-codec', version = "2.0.0", features = ['derive']}
 hex = { version = "0.4.3" }
 log = { version = "0.4" }
+scale-info = { version = "1.0", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = { version = "1.0" }
 serde_json = { version = "1.0" }
@@ -23,4 +24,4 @@ sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrat
 sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # new parity repo
-frame-metadata = { version = "14.0.0", git = "https://github.com/paritytech/frame-metadata.git", branch = "main", features = ["v13"] }
+frame-metadata = { version = "14.0.0", git = "https://github.com/paritytech/frame-metadata.git", branch = "main", features = ["v14"] }
