Independent compose-macros crate (#186)
* extract ac_compose crate and move xt-primitives to primitives/extrinsics; compiles

* [primitives/extrinsics] derive more stuff on extrinsics

* cleanup

* fix no_std compilation

* cleanup

* [primitives/extrinsics] make fields in `GenericExtra` public

* [compose] fix macro re-export

* fix example compilation

* fix tests

* improve feature gating of extrinsics

* rename ac-compose -> ac-compose-macros

* review fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [workspace]
 members = [
 	".",
+	"compose-macros",
 	"client-keystore",
 	"node-api",
 	"test-no-std",
@@ -40,6 +41,7 @@ metadata = { version = "14.0.0", default-features = false, git = "https://github
 sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }
 
 # local deps
+ac-compose-macros = { path = "compose-macros", default-features = false }
 ac-node-api = { path = "node-api", optional = true }
 ac-primitives = { path = "primitives", default-features = false }
 
@@ -72,6 +74,7 @@ std = [
 	"sp-rpc",
 	"transaction-payment/std",
 	# local deps
+	"ac-compose-macros/std",
 	"ac-node-api",
 	"ac-primitives/std",
 ]
